# Capture-the-Base

./: .gitmodules  CMakeLists.txt  Capture-the-Base.cbp  README.md  main.cpp
assets/: Assets.xml
cmake/: src.cmake
src/core/: Application.cpp  Application.hpp  Asset.cpp  Asset.hpp  Assets.cpp  Assets.hpp  DataStore.cpp  DataStore.hpp  Factory.cpp  Factory.hpp  RenderVisualObjects.cpp  RenderVisualObjects.hpp  State.cpp  State.hpp  States.cpp  States.hpp  Store.cpp  Store.hpp  VisualObject.cpp  VisualObject.hpp  VisualObjects.cpp  VisualObjects.hpp  Window.cpp  Window.hpp
src/ecs/: ECSWorld.cpp  ECSWorld.hpp
src/ecs/components/: AIComponent.hpp  CellComponent.cpp  CellComponent.hpp  ChipComponent.cpp  ChipComponent.hpp  ChipTargetComponent.hpp  InputEventComponent.hpp  TeamComponent.cpp  TeamComponent.hpp  TextComponent.cpp  TextComponent.hpp  TextureComponent.cpp  TextureComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  VisualObjectComponent.cpp  VisualObjectComponent.hpp
src/ecs/systems/: AISystem.cpp  AISystem.hpp  BaseSystem.cpp  BaseSystem.hpp  InputSystem.cpp  InputSystem.hpp  System.cpp  System.hpp  Systems.cpp  Systems.hpp  UpdateTextsSystem.cpp  UpdateTextsSystem.hpp  UpdateVisualObjectsSystem.cpp  UpdateVisualObjectsSystem.hpp
src/ecs/utils/: AIUtils.cpp  AIUtils.hpp  BaseUtils.cpp  BaseUtils.hpp  CellsECSUtils.cpp  CellsECSUtils.hpp  CellsUtils.cpp  CellsUtils.hpp  ChipsECSUtils.cpp  ChipsECSUtils.hpp  ChipsUtils.cpp  ChipsUtils.hpp  ECSFactoryObjects.cpp  ECSFactoryObjects.hpp  PlayerUtils.cpp  PlayerUtils.hpp  RenderVisualObjectsECSUtils.cpp  (+7 more)
src/game/: GameApplicationDelegate.cpp  GameApplicationDelegate.hpp  GameState.cpp  GameState.hpp
templates/: Template.cpp  Template.hpp
